fixed horizontal scroll

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -27,7 +27,7 @@ ul {
     flex-direction: row;
     align-items: center;
     background-color: #eab700;
-    width: 100%;
+    width: auto;
     justify-content: space-around;
     padding: 1%;
 }
